# RobotHelper

./: .gitignore  README.md  UPDATE.md
Android/app/: CMakeLists.txt  build.gradle
Android/app/src/androidTest/java/cn/xjiangwei/RobotHelper/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/assets/: xposed_init
Android/app/src/main/assets/sendevent/arm/: sendevent
Android/app/src/main/assets/sendevent/arm64/: sendevent
Android/app/src/main/assets/sendevent/x64/: sendevent
Android/app/src/main/assets/sendevent/x86/: sendevent
Android/app/src/main/cpp/: Sendevent.cpp  sendEvent.cpp
Android/app/src/main/java/cn/xjiangwei/RobotHelper/: MainActivity.java  MainApplication.java
Android/app/src/main/java/cn/xjiangwei/RobotHelper/Accessibility/: AbstractNode.java  HttpServer.java  INode.java  Node.java
Android/app/src/main/java/cn/xjiangwei/RobotHelper/Broadcast/: ButtonBroadcastReceiver.java
Android/app/src/main/java/cn/xjiangwei/RobotHelper/GamePackage/: Main.java
Android/app/src/main/java/cn/xjiangwei/RobotHelper/Service/: Accessibility.java  Controller.java  FastInputIME.java  RunTime.java
Android/app/src/main/java/cn/xjiangwei/RobotHelper/Tools/: Color.java  FileUtils.java  Image.java  MLog.java  (+9 more)
Android/app/src/main/res/layout/: activity_main.xml  activity_start_dialog.xml  notification.xml
Android/app/src/main/res/values/: strings.xml  styles.xml
Android/app/src/main/res/xml/: accessibility_service_config.xml  method.xml
Android/app/src/test/java/cn/xjiangwei/RobotHelper/: ExampleUnitTest.java
(+224 files in other folders)
